// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseLayout does render 1`] = `
<div>
  <header
    className="rka-header"
  >
    <button
      className="rka-link-button rka-header-menu-icon"
      onClick={[Function]}
    />
    <a
      className="rka-header-logo"
      href="/"
      onClick={[Function]}
    />
    <nav
      className="rka-header-nav"
    >
      <div
        className="rka-user"
      >
        <div
          className="rka-avatar"
        >
          <svg
            className="rka-avatar-icon"
          >
            <use
              xlinkHref="avatar-placeholder.svg#avatar"
            />
          </svg>
        </div>
        <span
          className="rka-username"
        >
          test-organization
        </span>
      </div>
      <button
        className="rka-link-button rka-logout"
        onClick={[Function]}
      >
        <svg
          className="rka-logout-icon"
        >
          <use
            xlinkHref="logout-icon.svg#logout"
          />
        </svg>
      </button>
    </nav>
  </header>
  <nav
    className="rka-sidebar"
  >
    <ul
      className="rka-sidebar-nav"
    >
      <li>
        <a
          aria-current="page"
          className="rka-sidebar-link is-active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Dashboard
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/images"
          onClick={[Function]}
        >
          Images
        </a>
      </li>
      <li
        className="pos-r"
      >
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/stacks"
          onClick={[Function]}
        >
          Stacks
        </a>
        <a
          aria-current={null}
          className="rka-sidebar-link-icon"
          href="/new-stack"
          onClick={[Function]}
        >
          <svg
            className="rka-add-icon"
          >
            <use
              xlinkHref="add-icon.svg#add-icon"
            />
          </svg>
        </a>
        <div
          className="rka-sidebar-subnav"
        >
          <div
            className="rka-stacks-search-container"
          >
            <input
              className="rka-input-txt rka-stack-search"
              onChange={[Function]}
              placeholder="Search stack..."
              type="text"
            />
            <svg
              className="rka-stack-search-icon"
            >
              <use
                xlinkHref="search.svg#search-icon"
              />
            </svg>
          </div>
          <div
            className="rka-stacks-list is-loaded"
          >
            <div
              className="rka-stacks-load"
            />
          </div>
        </div>
      </li>
      <li>
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/costs"
          onClick={[Function]}
        >
          Costs
        </a>
      </li>
    </ul>
    <a
      className="rka-sidebar-poweredby"
      href="https://www.liip.ch/"
      rel="noopener noreferrer"
      target="_blank"
    >
      POWERED BY 
      <i
        className="rka-sidebar-liip-logo"
      />
    </a>
  </nav>
  <main
    className="main clearfix"
  >
    <span>
      Test Baselayout
    </span>
  </main>
  <footer
    className="rka-footer"
  >
    Rokka © 2018
  </footer>
</div>
`;

exports[`BaseLayout does render active sidebar 1`] = `
<div>
  <header
    className="rka-header"
  >
    <button
      className="rka-link-button rka-header-menu-icon is-active"
      onClick={[Function]}
    />
    <a
      className="rka-header-logo"
      href="/"
      onClick={[Function]}
    />
    <nav
      className="rka-header-nav"
    >
      <div
        className="rka-user"
      >
        <div
          className="rka-avatar"
        >
          <svg
            className="rka-avatar-icon"
          >
            <use
              xlinkHref="avatar-placeholder.svg#avatar"
            />
          </svg>
        </div>
        <span
          className="rka-username"
        >
          test-organization
        </span>
      </div>
      <button
        className="rka-link-button rka-logout"
        onClick={[Function]}
      >
        <svg
          className="rka-logout-icon"
        >
          <use
            xlinkHref="logout-icon.svg#logout"
          />
        </svg>
      </button>
    </nav>
  </header>
  <nav
    className="rka-sidebar is-active"
  >
    <ul
      className="rka-sidebar-nav"
    >
      <li>
        <a
          aria-current="page"
          className="rka-sidebar-link is-active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Dashboard
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/images"
          onClick={[Function]}
        >
          Images
        </a>
      </li>
      <li
        className="pos-r"
      >
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/stacks"
          onClick={[Function]}
        >
          Stacks
        </a>
        <a
          aria-current={null}
          className="rka-sidebar-link-icon"
          href="/new-stack"
          onClick={[Function]}
        >
          <svg
            className="rka-add-icon"
          >
            <use
              xlinkHref="add-icon.svg#add-icon"
            />
          </svg>
        </a>
        <div
          className="rka-sidebar-subnav"
        >
          <div
            className="rka-stacks-search-container"
          >
            <input
              className="rka-input-txt rka-stack-search"
              onChange={[Function]}
              placeholder="Search stack..."
              type="text"
            />
            <svg
              className="rka-stack-search-icon"
            >
              <use
                xlinkHref="search.svg#search-icon"
              />
            </svg>
          </div>
          <div
            className="rka-stacks-list is-loaded"
          >
            <div
              className="rka-stacks-load"
            />
          </div>
        </div>
      </li>
      <li>
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/costs"
          onClick={[Function]}
        >
          Costs
        </a>
      </li>
    </ul>
    <a
      className="rka-sidebar-poweredby"
      href="https://www.liip.ch/"
      rel="noopener noreferrer"
      target="_blank"
    >
      POWERED BY 
      <i
        className="rka-sidebar-liip-logo"
      />
    </a>
  </nav>
  <main
    className="main clearfix is-active"
  >
    <span>
      Test Baselayout
    </span>
  </main>
  <footer
    className="rka-footer"
  >
    Rokka © 2018
  </footer>
</div>
`;

exports[`BaseLayout does render alert 1`] = `
<div>
  <header
    className="rka-header"
  >
    <button
      className="rka-link-button rka-header-menu-icon"
      onClick={[Function]}
    />
    <a
      className="rka-header-logo"
      href="/"
      onClick={[Function]}
    />
    <nav
      className="rka-header-nav"
    >
      <div
        className="rka-user"
      >
        <div
          className="rka-avatar"
        >
          <svg
            className="rka-avatar-icon"
          >
            <use
              xlinkHref="avatar-placeholder.svg#avatar"
            />
          </svg>
        </div>
        <span
          className="rka-username"
        >
          test-organization
        </span>
      </div>
      <button
        className="rka-link-button rka-logout"
        onClick={[Function]}
      >
        <svg
          className="rka-logout-icon"
        >
          <use
            xlinkHref="logout-icon.svg#logout"
          />
        </svg>
      </button>
    </nav>
  </header>
  <nav
    className="rka-sidebar"
  >
    <ul
      className="rka-sidebar-nav"
    >
      <li>
        <a
          aria-current="page"
          className="rka-sidebar-link is-active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Dashboard
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/images"
          onClick={[Function]}
        >
          Images
        </a>
      </li>
      <li
        className="pos-r"
      >
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/stacks"
          onClick={[Function]}
        >
          Stacks
        </a>
        <a
          aria-current={null}
          className="rka-sidebar-link-icon"
          href="/new-stack"
          onClick={[Function]}
        >
          <svg
            className="rka-add-icon"
          >
            <use
              xlinkHref="add-icon.svg#add-icon"
            />
          </svg>
        </a>
        <div
          className="rka-sidebar-subnav"
        >
          <div
            className="rka-stacks-search-container"
          >
            <input
              className="rka-input-txt rka-stack-search"
              onChange={[Function]}
              placeholder="Search stack..."
              type="text"
            />
            <svg
              className="rka-stack-search-icon"
            >
              <use
                xlinkHref="search.svg#search-icon"
              />
            </svg>
          </div>
          <div
            className="rka-stacks-list is-loaded"
          >
            <div
              className="rka-stacks-load"
            />
          </div>
        </div>
      </li>
      <li>
        <a
          aria-current={null}
          className="rka-sidebar-link"
          href="/costs"
          onClick={[Function]}
        >
          Costs
        </a>
      </li>
    </ul>
    <a
      className="rka-sidebar-poweredby"
      href="https://www.liip.ch/"
      rel="noopener noreferrer"
      target="_blank"
    >
      POWERED BY 
      <i
        className="rka-sidebar-liip-logo"
      />
    </a>
  </nav>
  <main
    className="main clearfix"
  >
    <div
      className="rka-alert is-error txt-c"
    >
      <span
        className="rka-alert-msg"
      >
        test
      </span>
    </div>
    <span>
      Test Baselayout
    </span>
  </main>
  <footer
    className="rka-footer"
  >
    Rokka © 2018
  </footer>
</div>
`;
